# EasyBook

./: .env.example  .gitignore  CLAUDE.md  anna_archive_datasets_research.md  docker-compose.yml  ebook_system_design.md  fastapi_best_practices.md  meilisearch_technical_notes.md  vue3_vite_search_best_practices.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: admin.py  download.py  health.py  router.py  search.py
backend/app/core/: logging_config.py
backend/app/models/: book.py  gateway_health.py
backend/app/schemas/: search.py
backend/app/services/: cache_service.py  gateway_service.py  scheduler_service.py  search_service.py  stats_service.py
backend/etl/: create_tables.py  export_parquet.py  import_annas.py  migrate_remove_ipfs.py  sync_meilisearch.py
backend/tests/: conftest.py  test_gateway.py  test_search.py
frontend/: .dockerignore  .env.production  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: request.ts
frontend/src/components/: BookItem.vue  BookList.vue  SearchBox.vue  SearchPagination.vue
frontend/src/composables/: useSearch.ts
frontend/src/router/: index.ts
frontend/src/types/: search.ts
frontend/src/views/: AdminPage.vue  Home.vue  (+1 more)
rpiv/: ipfs_gateway_research.md
rpiv/archive/: code-review-download-sources-china.md  code-review-ebook-search-platform.md  plan-download-architecture-migration.md  plan-duckdb-async-download-r2.md  plan-ebook-search-platform.md  prd-download-architecture-migration.md  prd-download-source-optimization.md  prd-ebook-search-platform.md  system-review-ebook-search-platform.md
rpiv/plans/: plan-download-architecture-migration.md  plan-duckdb-search-migration.md
rpiv/requirements/: Gemini.md  prd-download-architecture-migration.md  prd-duckdb-search-migration.md
rpiv/validation/: code-review-download-sources-china.md
scripts/: auto_sync.ps1  auto_sync.vbs  register_task.ps1
(+3 files in other folders)
